# Fractals

./: .gitignore  Cargo.toml  README.md  manifest.json  mygraphics_shaders.spv
julia-set/: Cargo.toml
julia-set/src/: lib.rs
koch-curve/: Cargo.toml
koch-curve/src/: lib.rs
mandelbox/: Cargo.toml
mandelbox/src/: lib.rs
mandelbrotset/: Cargo.toml
mandelbrotset/src/: lib.rs
mandelbulb/: Cargo.toml
mandelbulb/src/: lib.rs
menger-brocolli/: Cargo.toml
menger-brocolli/src/: lib.rs
menger-sponge/: Cargo.toml
menger-sponge/src/: lib.rs
mygraphics/: Cargo.toml  build.rs
mygraphics-shaders/: Cargo.toml
mygraphics-shaders/src/: lib.rs
mygraphics/src/: lib.rs  main.rs  util.rs
mygraphics/src/wgpu_renderer/: mod.rs  render_pipeline.rs  renderer.rs  swapchain.rs
sierpinskie-carpet/: Cargo.toml
sierpinskie-carpet/src/: lib.rs
sierpinskie-shaders/: Cargo.toml
sierpinskie-shaders/src/: lib.rs
sierpinskie-tetrahedron/: Cargo.toml
sierpinskie-tetrahedron/src/: lib.rs
sierpinskie-triangle/: Cargo.toml
sierpinskie-triangle/src/: lib.rs
