[workspace]
members = [
    "mygraphics",
    "sierpinskie-triangle",
    "sierpinskie-carpet",
    "koch-curve",
    "mandelbrotset",
    "julia-set",
    "sierpinskie-tetrahedron",
    "menger-sponge",
    "mandelbulb"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["SWASTIC-7 <swastic_k@ee.iitr.ac.in>"]
edition = "2024"
license = "MIT"
repository = ""

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_arch, values("spirv"))'] }

[workspace.dependencies]
# API
wgpu = { version = "27.0.1", default-features = false, features = ["std", "parking_lot", "vulkan", "vulkan-portability", "spirv", "wgsl"] }
pollster = "0.4.0"

# rust-gpu
cargo-gpu = { git = "https://github.com/Rust-GPU/cargo-gpu", rev = "f2244a3f7f9f30998918a543075a1ce17b42af64" }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "79acad1f916d953275c93c16f006543ce18a14b1" }

# other
glam = { version = "0.32.0", default-features = false }
bytemuck = { version = "1.24.0", features = ["derive"] }
raw-window-handle = "0.6.2"
winit = "0.30.0"
env_logger = "0.11.8"
anyhow = "1.0.98"

