[package]
name = "mygraphics"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# shader crate
sierpinskie-shaders = { path = "../sierpinskie-shaders" }

# API
wgpu.workspace = true
pollster.workspace = true
env_logger.workspace = true

# other
raw-window-handle.workspace = true
winit.workspace = true
anyhow.workspace = true
bytemuck.workspace = true

[build-dependencies]
# rust-gpu
cargo-gpu.workspace = true

# other
anyhow.workspace = true
